--- a/Uas_Ar.html
+++ b/Uas_Ar.html
@@ -8,7 +8,7 @@
         <a-scene embedded arjs>
             <a-marker-camera type="pattern" url="https://lutrybere.github.io/ar/pattern-asia.patt">
                 <a-entity
-                gltf-model="robota.glb"
+                gltf-model="robot.glb"
                 scale="1.3 1.3 1.3"
                 animation="property:rotation;from:0 0 0;
                 to:0 360 0; dur: 3000;
